--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 
     <div class="header">
       <div class="a1">
-        <img class="a1-logo" src="logo-new.png" alt="Logo">
+        <img class="a1-logo" src="./assets/logo-new.png" alt="Logo">
       </div>
       <div class="a1">
         <a href="https://www.instagram.com/leozy.tt/" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -39,7 +39,7 @@
       </div>
 
       <div class="box-2">
-        <img class="box-2-img" src="myself-edit-1.png" alt="Foto de Leonardo Gross">
+        <img class="box-2-img" src="./assets/myself-edit-1.png" alt="Foto de Leonardo Gross">
       </div>
     </div>
     <!-- conhecimentos -->
@@ -107,7 +107,7 @@
               projeto</a>
           </div>
           <div class="print">
-            <img src="./print_crud_cadastro.png" alt="print-1">
+            <img src="./assets/print_crud_cadastro.png" alt="print-1">
           </div>
         </div>
 
@@ -120,7 +120,7 @@
               projeto</a>
           </div>
           <div class="print">
-            <img src="./print_crud_cadastro.png" alt="print-1">
+            <img src="./assets/print_crud_cadastro.png" alt="print-1">
           </div>
         </div>
 
@@ -133,7 +133,7 @@
               projeto</a>
           </div>
           <div class="print">
-            <img src="./print_crud_cadastro.png" alt="print-1">
+            <img src="./assets/print_crud_cadastro.png" alt="print-1">
           </div>
         </div>
       </div>
