--- a/index.html
+++ b/index.html
@@ -1,206 +1,224 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Leonardo Gross</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script> -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+    <link rel="icon" href="assets/sun.png" type="image/x-icon" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-  <title>Leonardo Gross</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script> -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="icon" href="assets/sun.png" type="image/x-icon" />
-  <link rel="stylesheet" href="styles.css" />
-</head>
-
-<body>
-  <div class="xbox">
-    <div class="header">
-      <div class="a1">
-        <img class="a1-logo" src="./assets/logo-new.png" alt="Logo" />
-      </div>
-      <div class="a1">
-        <a href="https://www.instagram.com/leozy.tt/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/leodev98/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://github.com/leonardodgr" target="_blank"><i class="fab fa-github"></i></a>
-      </div>
-    </div>
-    <!-- inicio -->
-    <div class="section">
-      <div class="box-1">
-        <h2 class="h2-box-1">
-          Leonardo <span class="sobrenome">Gross.</span>
-        </h2>
-        <p class="p-box-1">
-          Desenvolvedor dedicado a transformar ideias em soluções digitais eficientes. Tenho experiência com tecnologias
-          modernas e foco em usabilidade. Estou sempre em busca de novos desafios e aprendizado contínuo para entregar
-          projetos com propósito, desempenho e bom design.
-        </p>
-        <!-- <button href="https://www.linkedin.com/in/leodev98/">Veja mais!</button> -->
-        <a href="https://www.linkedin.com/in/leodev98/" target="_blank" class="button-link">Veja mais!</a>
-      </div>
-
-      <div class="box-2">
-        <img class="box-2-img" src="./assets/myself-edit-1.png" alt="Foto de Leonardo Gross" />
-      </div>
-    </div>
-    <!-- conhecimentos -->
-    <div class="section-2">
-      <div class="section-title">Conhecimentos .</div>
-
-      <div class="grade-1">
-        <div class="box-3">
-          <img src="Icons/JavaScript.png" alt="JavaScript" />
-          <span class="tech-label">JavaScript</span>
+  <body>
+    <div class="xbox">
+      <div class="header">
+        <div class="a1">
+          <img class="a1-logo" src="./assets/logo-new.png" alt="Logo" />
         </div>
-        <div class="box-3">
-          <img src="Icons/TypeScript.png" alt="TypeScript" />
-          <span class="tech-label">TypeScript</span>
-        </div>
-        <div class="box-3">
-          <img src="Icons/Node.js.png" alt="Node.js" />
-          <span class="tech-label">Node.js</span>
-        </div>
-        <div class="box-3">
-          <img src="Icons/CSS3.png" alt="CSS3" />
-          <span class="tech-label">CSS3</span>
-        </div>
-        <div class="box-3">
-          <img src="Icons/HTML5.png" alt="HTML5" />
-          <span class="tech-label">HTML5</span>
+        <div class="a1">
+          <a href="https://www.instagram.com/leozy.tt/" target="_blank"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/leodev98/" target="_blank"
+            ><i class="fab fa-linkedin-in"></i
+          ></a>
+          <a href="https://github.com/leonardodgr" target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
         </div>
       </div>
+      <!-- inicio -->
+      <div class="section">
+        <div class="box-1">
+          <h2 class="h2-box-1">
+            Leonardo <span class="sobrenome">Gross.</span>
+          </h2>
+          <p class="p-box-1">
+            Desenvolvedor dedicado a transformar ideias em soluções digitais
+            eficientes. Tenho experiência com tecnologias modernas e foco em
+            usabilidade. Estou sempre em busca de novos desafios e aprendizado
+            contínuo para entregar projetos com propósito, desempenho e bom
+            design.
+          </p>
+          <!-- <button href="https://www.linkedin.com/in/leodev98/">Veja mais!</button> -->
+          <a
+            href="https://www.linkedin.com/in/leodev98/"
+            target="_blank"
+            class="button-link"
+            >Veja mais!</a
+          >
+        </div>
 
-      <div class="grade-1">
-        <div class="box-3">
-          <img src="Icons/Sass.png" alt="Sass" />
-          <span class="tech-label">Sass</span>
-        </div>
-        <div class="box-3">
-          <img src="Icons/Bootstrap.png" alt="Bootstrap" />
-          <span class="tech-label">Bootstrap</span>
-        </div>
-        <div class="box-3">
-          <img src="Icons/MySQL.png" alt="MySQL" />
-          <span class="tech-label">MySQL</span>
-        </div>
-        <div class="box-3">
-          <img src="Icons/MongoDB.png" alt="MongoDB" />
-          <span class="tech-label">MongoDB</span>
-        </div>
-        <div class="box-3">
-          <img src="Icons/Git.png" alt="Git" />
-          <span class="tech-label">Git</span>
+        <div class="box-2">
+          <img
+            class="box-2-img"
+            src="./assets/myself-edit-1.png"
+            alt="Foto de Leonardo Gross"
+          />
         </div>
       </div>
+      <!-- conhecimentos -->
+      <div class="section-2">
+        <div class="section-title">Conhecimentos .</div>
 
-      <div class="grade-2">
-        <div class="box-3">
-          <img src="Icons/React.png" alt="MySQL" />
-          <span class="tech-label">React JS</span>
-        </div>
-        <div class="box-3">
-          <img src="Icons/Next.js.png" alt="MongoDB" />
-          <span class="tech-label">Next JS</span>
-        </div>
-        <div class="box-3">
-          <img src="Icons/Angular.png" alt="Git" />
-          <span class="tech-label">Angular JS</span>
-        </div>
-      </div>
-    </div>
-
-    <!-- projetos -->
-    <div class="section-3">
-      <h1>Projetos .</h1>
-
-      <div class="box-projeto">
-        <div class="projeto">
-          <div class="conteudo">
-            <h5>Cadastro de Usuários</h5>
-            <p>
-              Projeto fullstack para cadastro e gerenciamento de usuários, com
-              backend em Express, Prisma e MongoDB, e frontend em React.
-            </p>
+        <div class="grade-1">
+          <div class="box-3">
+            <img src="Icons/JavaScript.png" alt="JavaScript" />
+            <span class="tech-label">JavaScript</span>
           </div>
+          <div class="box-3">
+            <img src="Icons/TypeScript.png" alt="TypeScript" />
+            <span class="tech-label">TypeScript</span>
+          </div>
+          <div class="box-3">
+            <img src="Icons/Node.js.png" alt="Node.js" />
+            <span class="tech-label">Node.js</span>
+          </div>
+          <div class="box-3">
+            <img src="Icons/CSS3.png" alt="CSS3" />
+            <span class="tech-label">CSS3</span>
+          </div>
+          <div class="box-3">
+            <img src="Icons/HTML5.png" alt="HTML5" />
+            <span class="tech-label">HTML5</span>
+          </div>
+        </div>
 
-          <div>
-            <a href="https://crud-frontend-9m81.onrender.com/" target="_blank" rel="noopener noreferrer">Vizualizar
-              projeto</a>
-            <div class="print">
-              <img src="./assets/print_crud_cadastro.png" alt="print-1" />
+        <div class="grade-1">
+          <div class="box-3">
+            <img src="Icons/Sass.png" alt="Sass" />
+            <span class="tech-label">Sass</span>
+          </div>
+          <div class="box-3">
+            <img src="Icons/Bootstrap.png" alt="Bootstrap" />
+            <span class="tech-label">Bootstrap</span>
+          </div>
+          <div class="box-3">
+            <img src="Icons/MySQL.png" alt="MySQL" />
+            <span class="tech-label">MySQL</span>
+          </div>
+          <div class="box-3">
+            <img src="Icons/MongoDB.png" alt="MongoDB" />
+            <span class="tech-label">MongoDB</span>
+          </div>
+          <div class="box-3">
+            <img src="Icons/Git.png" alt="Git" />
+            <span class="tech-label">Git</span>
+          </div>
+        </div>
+
+        <div class="grade-2">
+          <div class="box-3">
+            <img src="Icons/React.png" alt="MySQL" />
+            <span class="tech-label">React JS</span>
+          </div>
+          <div class="box-3">
+            <img src="Icons/Next.js.png" alt="MongoDB" />
+            <span class="tech-label">Next JS</span>
+          </div>
+          <div class="box-3">
+            <img src="Icons/Angular.png" alt="Git" />
+            <span class="tech-label">Angular JS</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- projetos -->
+      <div class="section-3">
+        <h1>Projetos .</h1>
+
+        <div class="box-projeto">
+          <div class="projeto">
+            <div class="conteudo">
+              <h5>Cadastro de Usuários</h5>
+              <p>
+                Projeto fullstack para cadastro e gerenciamento de usuários, com
+                backend em Express, Prisma e MongoDB, e frontend em React.
+              </p>
+            </div>
+
+            <div>
+              <a
+                href="https://crud-frontend-9m81.onrender.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Vizualizar projeto</a
+              >
+              <div class="print">
+                <img src="./assets/print_crud_cadastro.png" alt="print-1" />
+              </div>
             </div>
           </div>
 
+          <div class="projeto">
+            <div class="conteudo">
+              <h5>Página de Login</h5>
+              <p>
+                Uma página de login simples e responsiva criada com React e CSS,
+                com validação de campos e design limpo.
+              </p>
+            </div>
 
-        </div>
-
-
-
-
-
-
-        <div class="projeto">
-
-          <div class="conteudo">
-            <h5>Página de Login</h5>
-            <p>
-              Uma página de login simples e responsiva criada com React e CSS,
-              com validação de campos e design limpo.
-            </p>
-          </div>
-
-
-
-          <div>
-            <a href="#" target="_blank" rel="noopener noreferrer">Vizualizar projeto</a>
-            <div class="print">
-              <img src="./assets/print_crud_cadastro.png" alt="print-1" />
+            <div>
+              <a href="#" target="_blank" rel="noopener noreferrer"
+                >Vizualizar projeto</a
+              >
+              <div class="print">
+                <img src="./assets/print_crud_cadastro.png" alt="print-1" />
+              </div>
             </div>
           </div>
 
+          <div class="projeto">
+            <div class="conteudo">
+              <h5>Lista de Tarefas</h5>
+              <p>
+                Um projeto simples de Lista de Tarefas (To-do List) desenvolvido
+                com React, com funcionalidades essenciais para gerenciamento de
+                tarefas do dia a dia.
+              </p>
+            </div>
 
-
-        </div>
-
-        <div class="projeto">
-
-          <div class="conteudo">
-            <h5>Lista de Tarefas</h5>
-            <p>
-              Um projeto simples de Lista de Tarefas (To-do List) desenvolvido
-              com React, com funcionalidades essenciais para gerenciamento de
-              tarefas do dia a dia.
-            </p>
-          </div>
-
-
-          <div>
-            <a href="#" target="_blank" rel="noopener noreferrer">Vizualizar projeto</a>
-            <div class="print">
-              <img src="./assets/print_crud_cadastro.png" alt="print-1" />
+            <div>
+              <a href="#" target="_blank" rel="noopener noreferrer"
+                >Vizualizar projeto</a
+              >
+              <div class="print">
+                <img src="./assets/print_crud_cadastro.png" alt="print-1" />
+              </div>
             </div>
           </div>
-
-
         </div>
-
-
       </div>
     </div>
-  </div>
 
-  <footer class="footer-home-pg" id="footer">
-    <div>© 2025 Leonardo Gross. Todos os direitos reservados.</div>
-    <div class="footer-icons">
-      <a href="https://www.instagram.com/leozy.tt/" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.linkedin.com/in/leodev98/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-      <a href="https://github.com/leonardodgr" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="mailto:leonardorev98@gmail.com"><i class="fas fa-envelope"></i></a>
-    </div>
-  </footer>
+    <footer class="footer-home-pg" id="footer">
+      <div>© 2025 Leonardo Gross. Todos os direitos reservados.</div>
+      <div class="footer-icons">
+        <a href="https://www.instagram.com/leozy.tt/" target="_blank"
+          ><i class="fab fa-instagram"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/leodev98/" target="_blank"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
+        <a href="https://github.com/leonardodgr" target="_blank"
+          ><i class="fab fa-github"></i
+        ></a>
+        <a href="mailto:leonardorev98@gmail.com"
+          ><i class="fas fa-envelope"></i
+        ></a>
+      </div>
+    </footer>
 
-  <script src="js/gsap.min.js"></script>
-  <script src="js/ScrollTrigger.min.js"></script>
-  <script src="js/main.js"></script>
-</body>
-
+    <script src="js/gsap.min.js"></script>
+    <script src="js/ScrollTrigger.min.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
