Alterando prints de projetos.

--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
             </div>
 
             <div>
-              <a href="#" target="_blank" rel="noopener noreferrer"
+              <a href="https://login-page-ten-smoky.vercel.app/" target="_blank" rel="noopener noreferrer"
                 >Vizualizar projeto</a
               >
               <div class="print">
-                <img src="./assets/print_crud_cadastro.png" alt="print-1" />
+                <img src="./assets/print3.png" alt="print-1" />
               </div>
             </div>
           </div>
@@ -187,11 +187,11 @@
             </div>
 
             <div>
-              <a href="#" target="_blank" rel="noopener noreferrer"
+              <a href="https://leonardodgr.github.io/todo-list-react/" target="_blank" rel="noopener noreferrer"
                 >Vizualizar projeto</a
               >
               <div class="print">
-                <img src="./assets/print_crud_cadastro.png" alt="print-1" />
+                <img src="./assets/print-2.png" alt="print-1" />
               </div>
             </div>
           </div>
