--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@
             </div>
 
             <div>
-              <a href="https://login-page-ten-smoky.vercel.app/" target="_blank" rel="noopener noreferrer"
+              <a
+                href="https://login-page-ten-smoky.vercel.app/"
+                target="_blank"
+                rel="noopener noreferrer"
                 >Vizualizar projeto</a
               >
               <div class="print">
@@ -187,7 +190,10 @@
             </div>
 
             <div>
-              <a href="https://leonardodgr.github.io/todo-list-react/" target="_blank" rel="noopener noreferrer"
+              <a
+                href="https://leonardodgr.github.io/todo-list-react/"
+                target="_blank"
+                rel="noopener noreferrer"
                 >Vizualizar projeto</a
               >
               <div class="print">
