--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script> -->
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link rel="icon" href="assets/sun.png" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -23,15 +21,12 @@
           <img class="a1-logo" src="./assets/logo-new.png" alt="Logo" />
         </div>
         <div class="a1">
-          <a href="https://www.instagram.com/leozy.tt/" target="_blank"
-            ><i class="fab fa-instagram"></i
-          ></a>
-          <a href="https://www.linkedin.com/in/leodev98/" target="_blank"
-            ><i class="fab fa-linkedin-in"></i
-          ></a>
-          <a href="https://github.com/leonardodgr" target="_blank"
-            ><i class="fab fa-github"></i
-          ></a>
+          <a href="mailto:leonardorev98@gmail.com"><i
+              class="fas fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/leodev98/" target="_blank"><i
+              class="fab fa-linkedin-in"></i></a>
+          <a href="https://github.com/leonardodgr" target="_blank"><i
+              class="fab fa-github"></i></a>
         </div>
       </div>
       <!-- inicio -->
@@ -51,17 +46,14 @@
           <a
             href="https://www.linkedin.com/in/leodev98/"
             target="_blank"
-            class="button-link"
-            >Veja mais!</a
-          >
+            class="button-link">Veja mais!</a>
         </div>
 
         <div class="box-2">
           <img
             class="box-2-img"
             src="./assets/myself-edit-1.png"
-            alt="Foto de Leonardo Gross"
-          />
+            alt="Foto de Leonardo Gross" />
         </div>
       </div>
       <!-- conhecimentos -->
@@ -148,9 +140,7 @@
               <a
                 href="https://crud-frontend-9m81.onrender.com/"
                 target="_blank"
-                rel="noopener noreferrer"
-                >Vizualizar projeto</a
-              >
+                rel="noopener noreferrer">Vizualizar projeto</a>
               <div class="print">
                 <img src="./assets/print_crud_cadastro.png" alt="print-1" />
               </div>
@@ -170,9 +160,7 @@
               <a
                 href="https://login-page-ten-smoky.vercel.app/"
                 target="_blank"
-                rel="noopener noreferrer"
-                >Vizualizar projeto</a
-              >
+                rel="noopener noreferrer">Vizualizar projeto</a>
               <div class="print">
                 <img src="./assets/print3.png" alt="print-1" />
               </div>
@@ -193,33 +181,90 @@
               <a
                 href="https://leonardodgr.github.io/todo-list-react/"
                 target="_blank"
-                rel="noopener noreferrer"
-                >Vizualizar projeto</a
-              >
+                rel="noopener noreferrer">Vizualizar projeto</a>
               <div class="print">
-                <img src="./assets/print-2.png" alt="print-1" />
+                <img src="./assets/print-3.png" alt="print-1" />
               </div>
             </div>
           </div>
         </div>
+        <!-- COMEÇO DA SEGUNDA LISTA DE PROJETOS -->
+        <div class="box-projeto">
+          <div class="projeto">
+            <div class="conteudo">
+              <h5>Dashboard</h5>
+              <p>
+                Este é um projeto de Dashboard desenvolvido com Next.js e
+                Shadcn.
+              </p>
+            </div>
+
+            <div>
+              <a
+                href="https://nextjs-dashboard-theta-blond-41.vercel.app/"
+                target="_blank"
+                rel="noopener noreferrer">Vizualizar projeto</a>
+              <div class="print">
+                <img src="./assets/dashboard-print.png" alt="print-1" />
+              </div>
+            </div>
+          </div>
+
+          <div class="projeto">
+            <div class="conteudo">
+              <h5>Loja Magick AI</h5>
+              <p>
+                Projeto desenvolvido com HTML, CSS e JavaScript criando uma loja
+                fictícia de cartas de personagens mágicos.
+              </p>
+            </div>
+
+            <div>
+              <a
+                href="https://leonardodgr.github.io/magick-ai/"
+                target="_blank"
+                rel="noopener noreferrer">Vizualizar projeto</a>
+              <div class="print">
+                <img src="./assets/magick-ai-print.png" alt="print-1" />
+              </div>
+            </div>
+          </div>
+
+          <div class="projeto">
+            <div class="conteudo">
+              <h5>Loja Magick AI</h5>
+              <p>
+                Projeto desenvolvido com HTML, CSS e JavaScript criando uma loja
+                fictícia de cartas de personagens mágicos.
+              </p>
+            </div>
+
+            <div>
+              <a
+                href="https://leonardodgr.github.io/magick-ai/"
+                target="_blank"
+                rel="noopener noreferrer">Vizualizar projeto</a>
+              <div class="print">
+                <img src="./assets/magick-ai-print.png" alt="print-1" />
+              </div>
+            </div>
+          </div>
+
+        </div>
+
       </div>
     </div>
 
     <footer class="footer-home-pg" id="footer">
       <div>© 2025 Leonardo Gross. Todos os direitos reservados.</div>
       <div class="footer-icons">
-        <a href="https://www.instagram.com/leozy.tt/" target="_blank"
-          ><i class="fab fa-instagram"></i
-        ></a>
-        <a href="https://www.linkedin.com/in/leodev98/" target="_blank"
-          ><i class="fab fa-linkedin-in"></i
-        ></a>
-        <a href="https://github.com/leonardodgr" target="_blank"
-          ><i class="fab fa-github"></i
-        ></a>
-        <a href="mailto:leonardorev98@gmail.com"
-          ><i class="fas fa-envelope"></i
-        ></a>
+
+        <a href="https://www.linkedin.com/in/leodev98/" target="_blank"><i
+            class="fab fa-linkedin-in"></i></a>
+        <a href="https://github.com/leonardodgr" target="_blank"><i
+            class="fab fa-github"></i></a>
+        <a href="mailto:leonardorev98@gmail.com"><i
+            class="fas fa-envelope"></i></a>
       </div>
     </footer>
 
