--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <div class="xbox">
+    <main id="main-container">
       <div class="header">
         <div class="a1">
           <img class="a1-logo" src="./assets/logo-new.png" alt="Logo" />
@@ -121,74 +121,9 @@
           </div>
         </div>
       </div>
-
       <!-- projetos -->
       <div class="section-3">
         <h1>Projetos .</h1>
-
-        <div class="box-projeto">
-          <div class="projeto">
-            <div class="conteudo">
-              <h5>Cadastro de Usuários</h5>
-              <p>
-                Projeto fullstack para cadastro e gerenciamento de usuários, com
-                backend em Express, Prisma e MongoDB, e frontend em React.
-              </p>
-            </div>
-
-            <div>
-              <a
-                href="https://crud-frontend-9m81.onrender.com/"
-                target="_blank"
-                rel="noopener noreferrer">Vizualizar projeto</a>
-              <div class="print">
-                <img src="./assets/print_crud_cadastro.png" alt="print-1" />
-              </div>
-            </div>
-          </div>
-
-          <div class="projeto">
-            <div class="conteudo">
-              <h5>Página de Login</h5>
-              <p>
-                Uma página de login simples e responsiva criada com React e CSS,
-                com validação de campos e design limpo.
-              </p>
-            </div>
-
-            <div>
-              <a
-                href="https://login-page-ten-smoky.vercel.app/"
-                target="_blank"
-                rel="noopener noreferrer">Vizualizar projeto</a>
-              <div class="print">
-                <img src="./assets/print3.png" alt="print-1" />
-              </div>
-            </div>
-          </div>
-
-          <div class="projeto">
-            <div class="conteudo">
-              <h5>Lista de Tarefas</h5>
-              <p>
-                Um projeto simples de Lista de Tarefas (To-do List) desenvolvido
-                com React, com funcionalidades essenciais para gerenciamento de
-                tarefas do dia a dia.
-              </p>
-            </div>
-
-            <div>
-              <a
-                href="https://leonardodgr.github.io/todo-list-react/"
-                target="_blank"
-                rel="noopener noreferrer">Vizualizar projeto</a>
-              <div class="print">
-                <img src="./assets/print-3.png" alt="print-1" />
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- COMEÇO DA SEGUNDA LISTA DE PROJETOS -->
         <div class="box-projeto">
           <div class="projeto">
             <div class="conteudo">
@@ -253,7 +188,7 @@
         </div>
 
       </div>
-    </div>
+    </main>
 
     <footer class="footer-home-pg" id="footer">
       <div>© 2025 Leonardo Gross. Todos os direitos reservados.</div>
