--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   <head>
     <title>Leonardo Gross</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,12 +21,12 @@
           <img class="a1-logo" src="./assets/logo-new.png" alt="Logo" />
         </div>
         <div class="a1">
-          <a href="mailto:leonardorev98@gmail.com"><i
-              class="fas fa-envelope"></i></a>
           <a href="https://www.linkedin.com/in/leodev98/" target="_blank"><i
               class="fab fa-linkedin-in"></i></a>
           <a href="https://github.com/leonardodgr" target="_blank"><i
               class="fab fa-github"></i></a>
+          <a href="mailto:leonardorev98@gmail.com"><i
+              class="fas fa-envelope"></i></a>
         </div>
       </div>
       <!-- inicio -->
@@ -36,11 +36,10 @@
             Leonardo <span class="sobrenome">Gross.</span>
           </h2>
           <p class="p-box-1">
-            Desenvolvedor dedicado a transformar ideias em soluções digitais
-            eficientes. Tenho experiência com tecnologias modernas e foco em
-            usabilidade. Estou sempre em busca de novos desafios e aprendizado
-            contínuo para entregar projetos com propósito, desempenho e bom
-            design.
+
+            Developer dedicated to transforming ideas into functional digital
+            solutions, using modern technologies with a focus on performance,
+            usability and user experience.
           </p>
           <!-- <button href="https://www.linkedin.com/in/leodev98/">Veja mais!</button> -->
           <a
@@ -147,7 +146,7 @@
 
           <div class="projeto">
             <div class="conteudo">
-              <h5>Loja Magick AI</h5>
+              <h5>Web Store</h5>
               <p>
                 Projeto desenvolvido com HTML, CSS e JavaScript criando uma loja
                 fictícia de cartas de personagens mágicos.
@@ -167,33 +166,30 @@
 
           <div class="projeto">
             <div class="conteudo">
-              <h5>Loja Magick AI</h5>
+              <h5>Landing Page</h5>
               <p>
-                Projeto desenvolvido com HTML, CSS e JavaScript criando uma loja
-                fictícia de cartas de personagens mágicos.
+                Landing page para Petshop, desenvolvida com Next.js, responsiva
+                para smartphones, tablets e desktops.
               </p>
             </div>
 
             <div>
               <a
-                href="https://leonardodgr.github.io/magick-ai/"
+                href="https://landing-page-petshop-eight.vercel.app/"
                 target="_blank"
                 rel="noopener noreferrer">Vizualizar projeto</a>
               <div class="print">
-                <img src="./assets/magick-ai-print.png" alt="print-1" />
+                <img src="./assets/petshop.jpg" alt="print-1" />
               </div>
             </div>
           </div>
-
         </div>
-
       </div>
     </main>
 
     <footer class="footer-home-pg" id="footer">
       <div>© 2025 Leonardo Gross. Todos os direitos reservados.</div>
       <div class="footer-icons">
-
         <a href="https://www.linkedin.com/in/leodev98/" target="_blank"><i
             class="fab fa-linkedin-in"></i></a>
         <a href="https://github.com/leonardodgr" target="_blank"><i
